# am-project

./: .gitignore  README.md  color_theme.json  hsa.py  lesss.py  main.py  main3.py  requirements.txt  setup.bat  test.py  test.txt
random_batch/: main.py
resources/: __init__.py  resources.py  resources.qrc
src_bern_zz/: A.C  Makefile  Makefile.am  Makefile.in  client.c  cone.c  cone.h  cs.h  dict.ps  end.ps  fft.mcd  fft_zdzd_l_50_rk_om_5_a0_1_50000  fft_zdzd_l_50_rk_om_5_a0_1_60000  fft_zdzd_l_50_rk_om_5_a0_1_70000  hsa.c  hsa.h  main.c  map2ps.sh  msgs.h  novmap2ps.sh  pr_lam_25_0.0000019531  pr_lam_25_0.1991633223  pr_lam_25_150  pr_lam_25_200  pr_lam_25_210  pr_lam_25_2441.40625  pr_lam_25_280  pr_lam_25_3.90625  pr_lam_25_300  pr_lam_25_350  pr_lam_25_390.625  pr_lam_25_420  pr_lam_25_490  pr_lam_25_560  pr_lam_25_70  proba  proba1.xmcd  proba2.xmcd  progib.mcd  q.opt  (+15 more)
src_bern_zz/.deps/: client.Po  cone.Po  hsa.Po  main.Po  server.Po
txt/: 01b3ec1f-c6f1-4253-873d-1a3c90251cbb.txt.stm
ui/: common_map_interface.py  hsa_map.py  info.ui  information.py  lesssa_map.py  settings.py  settings.ui  settings2.py  tabs.py
utilities/: helper.py  hsa.py  lesss.py  lesssa.py  main_1.py  main_2.py
